ubertooth (2018.12.R1-1) unstable; urgency=medium

  * New upstream release
  * debian/libubertooth1.symbols:
    - Added new symbol in symbols file

 -- Ruben Undheim <ruben.undheim@gmail.com>  Thu, 20 Dec 2018 10:18:26 +0100

ubertooth (2018.08.R1-4) unstable; urgency=medium

  [ Helmut Grohne ]
  * Fix FTCBFS: Annotate python-all with :any. (Closes: #912757)

 -- Ruben Undheim <ruben.undheim@gmail.com>  Tue, 27 Nov 2018 22:33:34 +0100

ubertooth (2018.08.R1-3) unstable; urgency=medium

  [ Helmut Grohne ]
  * Demote Build-Depends: python-all-dev to python-all. (Closes: #909553)

  [ Ruben Undheim ]
  * debian/control:
    - New standards version 4.2.1 - no changes

 -- Ruben Undheim <ruben.undheim@gmail.com>  Tue, 25 Sep 2018 10:40:00 +0200

ubertooth (2018.08.R1-2) unstable; urgency=medium

  * Move python-pyside.qtcore and python-pyside.qtgui from Depends to
    Recommends since core functionality is not broken when they are not
    present.

 -- Ruben Undheim <ruben.undheim@gmail.com>  Fri, 10 Aug 2018 13:32:26 +0200

ubertooth (2018.08.R1-1) unstable; urgency=medium

  * New upstream release
    - Refreshed patches
  * Simplify handling of revision patch so that it does not need
    to be updated for every new upstream release.
  * debian/source/lintian-overrides deleted since it is not needed anymore
  * debian/compat: level 11
  * debian/control:
    - debhelper >= 11
    - New standards version 4.2.0 - no changes
  * debain/rules:
    - Pass --no-parallel to dh_auto_build for firmware since it does not build
      reliably with multiple threads.

 -- Ruben Undheim <ruben.undheim@gmail.com>  Fri, 10 Aug 2018 12:24:01 +0200

ubertooth (2018.06.R1-2) unstable; urgency=medium

  * debian/upstream/metadata added
  * debian/patches/04_no_git_for_debian.patch:
    - Fix setting GIT_REVISION in patch

 -- Ruben Undheim <ruben.undheim@gmail.com>  Thu, 09 Aug 2018 10:48:40 +0200

ubertooth (2018.06.R1-1) unstable; urgency=medium

  * New upstream release